Refactored backend to replace UnitRegistry and repository-based data management with a service-oriented approach. Updated data classes for CommunityDragon integration and introduced WebFlux client for API fetching. Removed obsolete repositories and adjusted related configurations to align with the new structure.
JIRA-XXXX