@@ -1,5 +1,7 @@
 package com.tfttools.service;
 
+import com.tfttools.domain.Trait;
+import com.tfttools.domain.Unit;
 import com.tfttools.dto.FilterDTO;
 import com.tfttools.dto.SearchResultDTO;
 import com.tfttools.dto.TraitDTO;
@@ -7,10 +9,14 @@ import com.tfttools.dto.UnitDTO;
 import com.tfttools.mapper.TraitMapper;
 import com.tfttools.mapper.UnitMapper;
 import com.tfttools.prefixtrie.PrefixTrieUtils;
-import com.tfttools.registry.UnitRegistry;
+import com.tfttools.repository.TraitRepository;
+import com.tfttools.repository.UnitRepository;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -19,35 +25,38 @@ import java.util.stream.Collectors;
 @Service
 public class UnitService
 {
+    private final UnitRepository unitRepository;
+    private final TraitRepository traitRepository;
 
-    private final UnitRegistry unitRegistry;
     private final UnitMapper unitMapper;
     private final TraitMapper traitMapper;
 
-    public UnitService(UnitRegistry unitRegistry, UnitMapper unitMapper, TraitMapper traitMapper)
+    public UnitService(UnitRepository unitRepository, TraitRepository traitRepository,
+                       UnitMapper unitMapper, TraitMapper traitMapper)
     {
-        this.unitRegistry = unitRegistry;
+        this.unitRepository = unitRepository;
+        this.traitRepository = traitRepository;
         this.unitMapper = unitMapper;
         this.traitMapper = traitMapper;
     }
 
     /**
-     * Gets all units from {@link UnitRegistry} and sanitizes it for the requestor
+     * Gets all units from {@link UnitRepository} and sanitizes it for the requestor
      *
      * @return List of {@link UnitDTO}
      */
     public List<UnitDTO> getAllUnits()
     {
-        return unitRegistry.getAllUnits().stream().map(unitMapper).collect(Collectors.toList());
+        return unitRepository.getAllUnits().stream().map(unitMapper).collect(Collectors.toList());
     }
 
     public List<TraitDTO> getAllTraits()
     {
-        return unitRegistry.getAllTraits().stream().map(traitMapper).collect(Collectors.toList());
+        return traitRepository.getAllTraits().stream().map(traitMapper).collect(Collectors.toList());
     }
 
     /**
-     * Gets suggestions from {@link UnitRegistry} and sanitizes it for the requestor
+     * Gets suggestions from {@link UnitRepository} and {@link TraitRepository} and sanitizes it for the requestor
      *
      * @param search The input parameter for a search
      * @return SearchResultDTO
@@ -60,14 +69,45 @@ public class UnitService
             return new SearchResultDTO();
         }
 
-        List<UnitDTO> champs = unitRegistry.getAllChampionsStartingWith(search).stream().map(unitMapper).collect(Collectors.toList());
-        List<TraitDTO> traits = unitRegistry.getAllTraitsStartingWith(search).stream().map(traitMapper).collect(Collectors.toList());
+        List<UnitDTO> champs = unitRepository.getAllChampionsStartingWith(search).stream().map(unitMapper).collect(Collectors.toList());
+        List<TraitDTO> traits = traitRepository.getAllTraitsStartingWith(search).stream().map(traitMapper).collect(Collectors.toList());
 
         return new SearchResultDTO(champs, traits);
     }
 
+    /**
+     * Gets units according to filter params in FilterDTO
+     *
+     * @param filterDTO Contains filter data {@link FilterDTO}
+     * @return List of units {@link Unit}
+     */
     public List<UnitDTO> filter(FilterDTO filterDTO)
     {
-        return unitRegistry.filter(filterDTO).stream().map(unitMapper).collect(Collectors.toList());
+        Set<Unit> filteredUnits = new HashSet<>(unitRepository.getAllUnits());
+
+        if (!filterDTO.getUnits().isEmpty())
+        {
+            // From unitDTOList map displayName -> actual unit
+            List<Unit> unitList = filterDTO.getUnits().stream().map(unitDTO -> unitRepository.getUnitByName(unitDTO.getDisplayName())).toList();
+
+            // For each unit in unitList map unit -> SingletonSet(Unit)
+            List<Set<Unit>> unitsFromChampions = unitList.stream().map(Collections::singleton).toList();
+
+            // For each unit take intersection of filteredUnits and UnitSingleton
+            unitsFromChampions.forEach(filteredUnits::retainAll);
+
+        }
+
+        if (!filterDTO.getTraits().isEmpty())
+        {
+            // From traitList map displayName -> Trait
+            List<Trait> traitList = filterDTO.getTraits().stream().map(traitDTO -> traitRepository.getTraitByName(traitDTO.getDisplayName())).toList();
+            // For each trait, take intersection of filteredUnits and Set(all units in trait)
+            traitList.forEach(trait -> filteredUnits.retainAll(new HashSet<>(unitRepository.getUnitsByTrait(trait))));
+        }
+
+        return filteredUnits.stream().map(unitMapper).collect(Collectors.toList());
     }
+
+
 }
